fix: bug for headers add: header absolute top 0 and z-index -1

--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -5,6 +5,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: absolute;
+    z-index: -1;
+    top: 0;
 }
 
 .space-icon{
