--- a/src/components/item/Item.module.css
+++ b/src/components/item/Item.module.css
@@ -10,12 +10,6 @@
     padding: 1rem;
 }
 
-.card:last-child{
-    margin-bottom: 1rem;
-}
-
-
-
 .card div img{
     width: 1rem;
     height: 1rem;
