--- a/src/components/pages/todos/create/Create.module.css
+++ b/src/components/pages/todos/create/Create.module.css
@@ -8,6 +8,8 @@ body{
     /* justify-content: center; */
     align-items: center;
     flex-direction: column;
+    padding-bottom: 1rem;
+    margin-top: 10rem;
 }
 
 .container-title{
@@ -79,4 +81,8 @@ body{
     border-radius: 0.5rem;
     font-size: 0.8rem;
     font-weight: normal;
+}
+
+.listTodos{
+    padding: 1rem;
 }
