--- a/src/components/pages/users/login/Login.module.css
+++ b/src/components/pages/users/login/Login.module.css
@@ -6,6 +6,7 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-top: 10rem;
 }
 
 .form{
